--- a/GraphIt.wasm/wwwroot/index.html
+++ b/GraphIt.wasm/wwwroot/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Graphanatic</title>
     <base href="/" />
-    <link href="GraphIt.wasm.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link href="https://cdn.syncfusion.com/blazor/18.4.31/bootstrap4.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
@@ -16,13 +15,17 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
-
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
+    <div id="app">
+        <div class="d-flex justify-content-center" style="position:fixed; top:0; left:0; right:0; bottom:0; overflow:auto; width:100%; height:100%; background: black;">
+            <div class="row align-self-center">
+                <img src="files/graphanaticlogo.svg">
+                <div class="spinner-border text-white" role="status">
+                    <span class="sr-only"></span>
+                </div>
+            </div>
+        </div>
     </div>
+
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
