--- a/GraphIt.wasm/wwwroot/index.html
+++ b/GraphIt.wasm/wwwroot/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Graphanatic</title>
     <base href="/" />
-    <link href="manifest.json" rel="manifest" />
     <link href="https://cdn.syncfusion.com/blazor/18.4.31/bootstrap4.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
     <link href="https://cdn.syncfusion.com/ej2/fabric.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="manifest.json" rel="manifest" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
 <body>
